--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<script type="text/javascript">
 		  document.addEventListener('DOMContentLoaded', function() {
 	      var URL = "0AvFUWxii39gXdGxhcjhzYzlBX2pyVFZZU2VjZ3BHZ3c"
-	      Tabletop.init( { key: d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pubhtml?gid=1836113177&single=true, callback: initialize, simpleSheet: true } )
+	      Tabletop.init( { key: 1836113177, callback: initialize, simpleSheet: true } )
 	    })
 		</script>
 	</body>
