--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<script type="text/javascript">
 		  document.addEventListener('DOMContentLoaded', function() {
 	      var URL = "0AvFUWxii39gXdGxhcjhzYzlBX2pyVFZZU2VjZ3BHZ3c"
-	      Tabletop.init( { key: umhSbsFBLdZreeunxSBDpbojd, callback: initialize, simpleSheet: true } )
+	      Tabletop.init( { key: z7P4LvXjAzD4zbLu4, callback: initialize, simpleSheet: true } )
 	    })
 		</script>
 	</body>
