--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<script type="text/javascript">
 		  document.addEventListener('DOMContentLoaded', function() {
 	      var URL = "0AvFUWxii39gXdGxhcjhzYzlBX2pyVFZZU2VjZ3BHZ3c"
-	      Papa.parse('https://docs.google.com/spreadsheets/d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pubhtml?gid=1836113177&single=true', {
+	      Papa.parse('https://docs.google.com/spreadsheets/d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pub?gid=1836113177&single=true&output=csv', {
           download: true,
           header: true,
           complete: function(results) {
