--- a/index.html
+++ b/index.html
@@ -71,16 +71,21 @@
 		{{/rows}}
 		</script>
 
-		<script type="text/javascript">
-		  document.addEventListener('DOMContentLoaded', function() {
-	      var URL = "0AvFUWxii39gXdGxhcjhzYzlBX2pyVFZZU2VjZ3BHZ3c"
-	      Tabletop.init( {
-    key: 'https://docs.google.com/spreadsheets/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pub?gid=1836113177&single=true&output=csv',
-    simpleSheet: true }
-  ).then(function(data, tabletop) { 
-    console.log(data)
-  })
-}
+		<script type='text/javascript'>    
+  			var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pubhtml';
+
+  			function init() {
+    				Tabletop.init(	{ 	key: publicSpreadsheetUrl,
+                     					callback: showInfo,
+                     					simpleSheet: true } )
+ 						}
+
+  					function showInfo(data, tabletop) {
+   					alert('Successfully processed!')
+    					console.log(data);
+  					}
+
+  			window.addEventListener('DOMContentLoaded', init)
 		</script>
 	</body>
 </html>
