--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 		<script type='text/javascript'>    
-  			var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pubhtml';
+  			var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRj2bXWnTfqgJXvGGWqPPwISTTf_umhSbsFBLdZreeunxSBDpbojd_z7P4LvXjAzD4zbLu4-CnyjhTe/pub?output=csv';
 
   			function init() {
     				Tabletop.init(	{ 	key: publicSpreadsheetUrl,
