--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 		<script type='text/javascript'>    
-  			var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1UlIbmxTTx3ogatrx67QhX4_3293pMZtW_8u5l_wrtZg/edit?usp=sharing';
+  			var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1UlIbmxTTx3ogatrx67QhX4_3293pMZtW_8u5l_wrtZg/edit?';
 
   			function init() {
     				Tabletop.init(	{ 	key: publicSpreadsheetUrl,
