--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<header class="container">
 			<h1>Tool Lending</h1>
 			<ul class="nav">
-				<li><strong>LENDING IS LOVELY</strong></li>
-				<li>AN OPEN SOURCE, EASY TO DUPLICATE PROJECT</li>
-				<li><a href="#info">HERE'S HOW</a></li>
+				<li><strong>PRÊTER C'EST SYMPA</strong></li>
+				<li>UN PROJET OPEN SOURCE, FACILE À RÉPLIQUER</li>
+				<li><a href="#info">VOICI LA MARCHE À SUIVRE</a></li>
 			</ul>
 		</header>
 		<div id="filters" class="container">
