--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<html lang="en">
-		<title>Tool Lending</title>
+		<title>Entraide et partage</title>
 		<meta charset='utf-8'>
 		<script type="text/javascript" src="js/ICanHaz.js"></script>
 		<script type="text/javascript" src='js/jquery.js'></script>
@@ -12,11 +12,11 @@
 	</head>
 	<body>
 		<header class="container">
-			<h1>Tool Lending</h1>
+			<h1>Entraide et partage</h1>
 			<ul class="nav">
-				<li><strong>PRÊTER C'EST SYMPA</strong></li>
-				<li>UN PROJET OPEN SOURCE, FACILE À RÉPLIQUER</li>
-				<li><a href="#info">VOICI LA MARCHE À SUIVRE</a></li>
+				<li><strong>Voici un répertoire</strong></li>
+				<li>des membres de la communauté, utile pour trouver des collègues avec l'expérience ou la connaissance que vous recherchez en termes de poste, d'outils, méthodes de travail et clients.</li>
+				//<li><a href="#info">VOICI LA MARCHE À SUIVRE</a></li>
 			</ul>
 		</header>
 		<div id="filters" class="container">
