--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="en">
+	<html lang="fr">
 		<title>Entraide et partage</title>
 		<meta charset='utf-8'>
 		<script type="text/javascript" src="js/ICanHaz.js"></script>
@@ -20,24 +20,24 @@
 			</ul>
 		</header>
 		<div id="filters" class="container">
-			<input id="toolSearch" type="search" placeholder="hammer.."></input>
+			<input id="toolSearch" type="search" placeholder="Recherche par nom"></input>
 			<span class="clear sml-button">Clear</span>
-			<span id="showAvailable" class="sml-button">Show Available</span>
+			<span id="showAvailable" class="sml-button">Disponibles</span>
 		</div>
-		<div id="tools" class="container"><span class="flash animated">LOADING...</span></div>
+		<div id="tools" class="container"><span class="flash animated">CHARGEMENT...</span></div>
 		<div id="info" class="container">
 				<div class="span1">
-					<h4>CONTRIBUTE TO THIS LIBRARY</h4>
-					<p>If you've been invited by the person who initiated this near you, you'll have access and the ability to edit the rows of the spreadsheet feeding data to this site.</p>
-					<p>Simply add the rows for the tools you have and add yes if an item is currently being borrowed. Easy, the Spreadsheet auto-saves, too!</p>
+					<h4>PARAGRAPHE</h4>
+					<p>texte</p>
+					<p>texte</p>
 
-					<p>More details for using this project <a href="http://www.github.com/jlord/lending-library" target="_blank">here</a>.
+					<p>texte <a href="http://www.github.com/jlord/lending-library" target="_blank">lien</a>.
 
 				</div>
 
 				<div class="span1">
-					<h4>START YOUR OWN</h4>
-					<p>The site is open source (free for all), uses a Google Spreadsheet for the data and is designed to be duplicated and live in minutes (Fork-n-go!). You can set up your own by following the instructions attached to the  <a href="http://www.github.com/jlord/lending-library" target="_blank">project's code</a> on GitHub. GitHub also hosts these pages for free with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
+					<h4>PARAGRAPHE</h4>
+					<p>texte  <a href="http://www.github.com/jlord/lending-library" target="_blank">lien</a> texte <a href="http://pages.github.com" target="_blank">lien</a>.
 
 					<p>
 						<a class="imglink" href="http://jlord.github.io/forkngo" target="_blank">
@@ -45,7 +45,7 @@
 						</a>
 					</p>
 
-					<p>Built by <a href="http://www.twitter.com/jllord">@jllord</a>.
+					<p>texte <a href="http://www.twitter.com/jllord">lien twitter</a>.
 
 				</div>
 		</div>
@@ -55,8 +55,8 @@
 		<div id="{{rowNumber}}" class="tool-box {{#checkedout}}not-{{/checkedout}}available">
 			<span class="tool-box-tool">{{tool}}</span>
 			<div class="tool-box-bottom {{rowNumber}}">
-				{{#checkedout}} <span class="tool-box-borrowed">ON LOAN</span>{{/checkedout}}
-				{{^checkedout}}<a href="mailto:{{owneremail}}?subject=Tool Lending: {{tool}}"><span class="tool-box-borrow btn">BORROW</span></a>{{/checkedout}}
+				{{#checkedout}} <span class="tool-box-borrowed">En mission</span>{{/checkedout}}
+				{{^checkedout}}<a href="mailto:{{owneremail}}?subject=Tool Lending: {{tool}}"><span class="tool-box-borrow btn">CONTACTER</span></a>{{/checkedout}}
 				<ul>
 					<li><small>WHO / WHERE : </small></li>
 					<li><a href="mailto:{{owneremail}}">{{owner}}</a></li>
